Change focus on click and start editable input as a button

--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -139,7 +139,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$1,000,000.00" />
+                                    <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$1,000,000.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                    </div>
                                 </td>
                                 <td tabindex="-1">$1,000,000.00</td>
                             </tr>
@@ -172,7 +175,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$250.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$250.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$999,750.00</td>
                             </tr>
@@ -205,7 +211,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$9.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$9.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$999,741.00</td>
                             </tr>
@@ -238,7 +247,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$88.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$88.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$999,653.00</td>
                             </tr>
@@ -271,7 +283,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$3,421.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$3,421.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$996,232.00</td>
                             </tr>
@@ -304,7 +319,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$700.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$700.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$995,532.00</td>
                             </tr>
@@ -337,7 +355,10 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input tabindex="-1" value="$41.00" />
+                                  <div tabindex="-1" class="editable-text" role="button">
+                                      <span class="edit-text-button">$41.00</span>
+                                      <input class="edit-text-input hidden" tabindex="-1" value="" />
+                                  </div>
                                 </td>
                                 <td tabindex="-1">$995,491.00</td>
                             </tr>
