added core styling

--- a/examples/treeview/treeview-1a/treeview-1a.html
+++ b/examples/treeview/treeview-1a/treeview-1a.html
@@ -4,6 +4,10 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>ARIA Tree View using DOM Structure Example: Links</title>
+    
+    <link href="../../css/core.css" rel="stylesheet"> 
+    <link href="../../css/table.css" rel="stylesheet">
+    
     <link href="treeview-1.css" rel="stylesheet">
     <script type="text/javascript" src="treeview.js" type="text/javascript"></script>
     <script type="text/javascript" src="treeview-1-onclick.js"></script>
