Accordion Example Minor Updates
1. Added a note saying the example page is work in progress and provided a link to issue #67.
2. Added explanation of the accordion behavior to the overview paragraph.

--- a/examples/accordion/accordion1.html
+++ b/examples/accordion/accordion1.html
@@ -19,12 +19,12 @@
 
 </head>
 <body>
-    <main> <!--  Repeat the name of the example in this H1  -->
     <h1>Accordion</h1>
-
+    <p class="note">This example page is work in progress. Provide feedback in <a href="https://github.com/w3c/aria-practices/issues/67">issue 67</a>.</p>
     <p>
         The below example section contains a personal information input form divided into 3 sections
         that demonstrates the <a href="../../#accordion">design pattern for accordion</a>.
+        In this implementation, one panel of the accordion is always expanded, and only one panel may be expanded at a time.
     </p>
 
     <section>
