update descriptions and titles

--- a/examples/treeview/treeview-1a/treeview-1a.html
+++ b/examples/treeview/treeview-1a/treeview-1a.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>ARIA Tree View using DOM Structure Example: Links</title>
+    <title>ARIA Tree View Example: File Viewer 1a</title>
     
     <link href="../../css/core.css" rel="stylesheet"> 
     <link href="../../css/table.css" rel="stylesheet">
@@ -15,7 +15,14 @@
   
   <body>
     <main>
-      <h1>ARIA Tree View using DOM Structure Example: Links</h1>
+      <h1>ARIA Tree View Example: File Viewer 1a</h1>
+      <ul>
+          <li>In this example the ARIA treeview relationships (e.g. <code>tree</code>, <code>group</code> and <code>treeitem</code>) are defined in the parent child relationships defined int he DOM structure.</li>
+          <li>This example relies on the browser to calculate the values of <code>aria-level</code>, <code>aria-setsize</code> and <code>aria-posinset</code> for communication to accessibility APIs.  NOTE: The <a href="http://www.w3.org/TR/wai-aria/states_and_properties#aria-level">ARIA specification recommends</a>, but does not require browsers to compute these values.</li>
+          <li><a href="https://www.w3.org/TR/wai-aria-practices-1.1/#TreeView">WAI-ARIA 1.1: Tree View authoring practices</a></li>
+      </ul>
+
+
       <h3 id="tree1">
         File Viewer
       </h3>
