--- a/examples/treeview/treeview-2a/treeview-2a.html
+++ b/examples/treeview/treeview-2a/treeview-2a.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>ARIA Tree View Example: Links 2a</title>
+    <title>ARIA Tree View Example 2a: Links</title>
     
     <link href="../../css/core.css" rel="stylesheet"> 
     <link href="../../css/table.css" rel="stylesheet">
@@ -14,7 +14,7 @@
   
   <body>
     <main>
-      <h1>ARIA Tree View Example: Links 2a</h1>
+      <h1>ARIA Tree View Example 2a: Links</h1>
 
       <ul>
         <li>In this example the ARIA treeview relationships (e.g. <code>tree</code>, <code>group</code> and <code>treeitem</code>) are defined in the parent child relationships defined int he DOM structure.</li>
