--- a/examples/treeview/treeview-1b/treeview-1b.html
+++ b/examples/treeview/treeview-1b/treeview-1b.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>ARIA Tree View Example: File Viewer 1b</title>
+    <title>ARIA Tree View Example 1b: File Viewer</title>
 
     <link href="../../css/core.css" rel="stylesheet"> 
     <link href="../../css/table.css" rel="stylesheet">
@@ -15,7 +15,7 @@
   
   <body>
     <main>
-      <h1>ARIA Tree View Example: File Viewer 1b</h1>
+      <h1>ARIA Tree View Example 1b: File Viewer</h1>
       <ul>
         <li>In this example the ARIA treeview relationships (e.g. <code>tree</code>, <code>group</code> and <code>treeitem</code>) are defined in the parent child relationships defined in the DOM structure.</li>
         <li>This example the author specifies the values of <code>aria-level</code>, <code>aria-setsize</code> and <code>aria-posinset</code> for communication to accessibility APIs.  Therefore this example does not rely on the browser to compute these values.</li>
