--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -406,9 +406,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Cash Deposit</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Income</button>
-                                </td>
+                                <td tabindex="-1">Income</td>
                                 <td tabindex="-1">$1,000,000.00</td>
                                 <td tabindex="-1">$1,000,000.00</td>
                             </tr>
@@ -418,9 +416,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Down Town Grocery</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Groceries</button>
-                                </td>
+                                <td tabindex="-1">Groceries</td>
                                 <td tabindex="-1">$250.00</td>
                                 <td tabindex="-1">$999,750.00</td>
                             </tr>
@@ -430,9 +426,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Hot Coffee</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
-                                </td>
+                                <td tabindex="-1">Dining Out</td>
                                 <td tabindex="-1">$9.00</td>
                                 <td tabindex="-1">$999,741.00</td>
                             </tr>
@@ -442,9 +436,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">The Filling Station</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Auto</button>
-                                </td>
+                                <td tabindex="-1">Auto</td>
                                 <td tabindex="-1">$88.00</td>
                                 <td tabindex="-1">$999,653.00</td>
                             </tr>
@@ -454,9 +446,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Tinker's Hardware</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Household</button>
-                                </td>
+                                <td tabindex="-1">Household</td>
                                 <td tabindex="-1">$3,421.00</td>
                                 <td tabindex="-1">$996,232.00</td>
                             </tr>
@@ -466,9 +456,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Cutey's Salon</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Beauty</button>
-                                </td>
+                                <td tabindex="-1">Beauty</td>
                                 <td tabindex="-1">$700.00</td>
                                 <td tabindex="-1">$995,532.00</td>
                             </tr>
@@ -478,9 +466,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">My Chocolate Shop</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
-                                </td>
+                                <td tabindex="-1">Dining Out</td>
                                 <td tabindex="-1">$41.00</td>
                                 <td tabindex="-1">$995,491.00</td>
                             </tr>
@@ -490,9 +476,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Who's Cook'n</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
-                                </td>
+                                <td tabindex="-1">Dining Out</td>
                                 <td tabindex="-1">$150.00</td>
                                 <td tabindex="-1">$995,341.00</td>
                             </tr>
@@ -502,9 +486,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Dmuddy Paws</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Pet</button>
-                                </td>
+                                <td tabindex="-1">Pet</td>
                                 <td tabindex="-1">$100.00</td>
                                 <td tabindex="-1">$995,241.00</td>
                             </tr>
@@ -514,9 +496,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">West End Bikes</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Recreation</button>
-                                </td>
+                                <td tabindex="-1">Recreation</td>
                                 <td tabindex="-1">$6,420.00</td>
                                 <td tabindex="-1">$988,821.00</td>
                             </tr>
@@ -526,9 +506,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Pay More Cars</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Auto</button>
-                                </td>
+                                <td tabindex="-1">Auto</td>
                                 <td tabindex="-1">$431,323.00</td>
                                 <td tabindex="-1">$557,498.00</td>
                             </tr>
@@ -538,9 +516,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">The Interior Shop</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Household</button>
-                                </td>
+                                <td tabindex="-1">Household</td>
                                 <td tabindex="-1">$142,334.00</td>
                                 <td tabindex="-1">$415,164.00</td>
                             </tr>
@@ -550,9 +526,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Adventure Guys</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Recreation</button>
-                                </td>
+                                <td tabindex="-1">Recreation</td>
                                 <td tabindex="-1">$88,424.00</td>
                                 <td tabindex="-1">$326,740.00</td>
                             </tr>
@@ -562,9 +536,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Hungry Folks Place</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Dining Out</button>
-                                </td>
+                                <td tabindex="-1">Dining Out</td>
                                 <td tabindex="-1">$313.00</td>
                                 <td tabindex="-1">$326,427.00</td>
                             </tr>
@@ -574,9 +546,7 @@
                                 <td>
                                     <a tabindex="-1" href="#">Horse Play</a>
                                 </td>
-                                <td>
-                                    <button tabindex="-1" aria-haspopup="true">Recreation</button>
-                                </td>
+                                <td tabindex="-1">Recreation</td>
                                 <td tabindex="-1">$2,421.00</td>
                                 <td tabindex="-1">$324,006.00</td>
                             </tr>
